app-js/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-support-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: it-support
  template:
    metadata:
      labels:
        app: it-support
    spec:
      containers:
      - name: it-support-app
        image: acrcarlos69v3.azurecr.io/it-support-app:v2
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: it-support-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: it-support
