app-js/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-support-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # Eliminamos rewrite-target para que la ruta /tickets llegue limpia al pod
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: it-support-service
            port:
              number: 80
